msg/simple/Pipe: disable rx_buffer code

This reproducibly crashes. Although we don't have a complete understanding
of the exact sequence leading to the crash, we can reproduce, and we have
multiple theoretical cases where it appears to be broken by design.

Fixes: http://tracker.ceph.com/issues/22480
Signed-off-by: Sage Weil <sage@redhat.com>